--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs-extra": "^3.0.0",
     "get-package-info": "^1.0.0",
     "minimist": "^1.1.1",
+    "pify": "^3.0.0",
     "plist": "^2.0.0",
     "rcedit": "^0.9.0",
     "resolve": "^1.1.6",
