Force test Electron binary downloads to go to the old cache dir

--- a/test/ci/appveyor.yml
+++ b/test/ci/appveyor.yml
@@ -15,6 +15,7 @@ branches:
   - master
 
 install:
+- mkdir %USERPROFILE%\.electron
 - ps: Install-Product node $env:nodejs_version $env:platform
 - npm install -g npm@4
 - set PATH=%APPDATA%\npm;%PATH%
